[project]
name = "ComfyUI_Mel_Nodes"
description = "Custom nodes with split, random, and select functions for easy visual and management of multiple cumbersome prompts"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/nako-nakoko/ComfyUI_Mel_Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "nakoko"
DisplayName = "ComfyUI_Mel_Nodes"
Icon = ""
